--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="section">
       <h2>Contact Us</h2>
       <p>Email: info@gyansarowar.in</p>
-      <p>Phone: +91-1234567890</p>
+      <p>Phone: +91-8083168642/p>
     </div>
   </div>
 
